<resources>
    <string name="app_name">Tourtle</string>
    <string name="title_home">Beranda</string>
    <string name="title_forum">Forum</string>
    <string name="title_smart_camera">Smart Camera</string>
    <string name="title_my_journey">My Journey</string>
    <string name="title_profile">Profile</string>

    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Temukan teman Travelmu dan jelajah bersama-sama!</string>
    <string name="title_welcome_page">Selamat datang di Tourtle!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk Travelling dengan teman travelmu?</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="name">Nama</string>
    <string name="logout">Logout</string>
    <string name="username">username</string>
    <string name="desc">Description</string>
    <string name="retry">Coba lagi</string>
    <string name="title_menu_1">Temukan Destinasi</string>
    <string name="desc_menu_1">Lokasi wisata yang menyenangkan, indah, dan sesuaikan dengan preferensimu.</string>
    <string name="title_menu_2">Teman Perjalanan Untukmu</string>
    <string name="desc_menu_2">Perjalanan yang semakin menyenangkan dengan teman baru atau bantuan pemandu.</string>
    <string name="title_menu_3">Bagikan Cerita dan Pengalaman Melalui Forum</string>
    <string name="desc_menu_3">"Bagikan cerita menarik, informasi penting, dan pengalaman kamu di tempat wisata. Bantu wisatawan lain dengan pengetahuan yang kamu miliki."</string>
    <string name="title_menu_4">Ayo mulai!\nSambut pengalaman baru perjalanan yang lebih mudah dan menyenangkan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>