<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_forum"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_forum" />

    <item
        android:id="@+id/navigation_smart_camera"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_smart_camera" />

    <item
        android:id="@+id/navigation_my_journey"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_my_journey" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profile" />
</menu>