<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tourtle.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_destination"
            app:destination="@id/navigation_destination"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_tour_guide"
            app:destination="@id/navigation_tour_guide"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_destination"
        android:name="com.example.tourtle.ui.home.destination.DestinationFragment"
        android:label="DestinationFragment"
        tools:layout="@layout/fragment_destination" />

    <fragment
        android:id="@+id/navigation_tour_guide"
        android:name="com.example.tourtle.ui.home.tour_guide.TourGuideFragment"
        android:label="Pemandu"
        tools:layout="@layout/fragment_tour_guide" />

    <fragment
        android:id="@+id/navigation_forum"
        android:name="com.example.tourtle.ui.forum.ForumFragment"
        android:label="@string/title_forum"
        tools:layout="@layout/fragment_forum"
        app:enterAnim="@anim/fade_in"
        app:exitAnim="@anim/fade_out"
        app:popEnterAnim="@anim/fade_in"
        app:popExitAnim="@anim/fade_out" />

    <fragment
        android:id="@+id/navigation_smart_camera"
        android:name="com.example.tourtle.ui.smart_camera.SmartCameraFragment"
        android:label="@string/title_smart_camera"
        tools:layout="@layout/fragment_smart_camera">
        <action
            android:id="@+id/action_smartCameraFragment_to_photoPreviewFragment"
            app:destination="@id/photoPreviewFragment"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right" />
    </fragment>

    <fragment
        android:id="@+id/photoPreviewFragment"
        android:name="com.example.tourtle.ui.smart_camera.photo_preview.PhotoPreviewFragment"
        android:label="Photo Preview"
        tools:layout="@layout/fragment_photo_preview">
        <argument
            android:name="photoUri"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_my_journey"
        android:name="com.example.tourtle.ui.my_journey.MyJourneyFragment"
        android:label="@string/title_my_journey"
        tools:layout="@layout/fragment_my_journey"
        app:enterAnim="@anim/fade_in"
        app:exitAnim="@anim/fade_out"
        app:popEnterAnim="@anim/fade_in"
        app:popExitAnim="@anim/fade_out" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.tourtle.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"
        app:enterAnim="@anim/fade_in"
        app:exitAnim="@anim/fade_out"
        app:popEnterAnim="@anim/fade_in"
        app:popExitAnim="@anim/fade_out" />
</navigation>