<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_welcome_scene"
    tools:context=".ui.welcome.WelcomeActivity">

    <!-- Background ImageView -->
    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_background" />

    <TextView
        android:id="@+id/skipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:text="Lewati"
        android:textColor="@color/slate700"
        android:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <TextView-->
<!--        android:id="@+id/skipTextView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="32dp"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:text="Lewati"-->
<!--        android:textColor="@android:color/white"-->
<!--        android:textSize="18sp"-->
<!--        android:paddingVertical="8dp"-->
<!--        android:paddingHorizontal="16dp"-->
<!--        android:background="@drawable/skip_text_background"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:foreground="@drawable/skip_text_ripple"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/logoMenu1"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/onboarding_menu1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleMenu1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:text="@string/title_menu_1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu1"
        app:layout_constraintStart_toStartOf="@+id/logoMenu1"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu1" />

    <TextView
        android:id="@+id/descMenu1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:text="@string/desc_menu_1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu1"
        app:layout_constraintStart_toStartOf="@+id/titleMenu1"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu1" />

    <ImageView
        android:id="@+id/logoMenu2"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/onboarding_menu2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/titleMenu2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu2"
        app:layout_constraintStart_toStartOf="@+id/logoMenu2"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu2"
        android:text="@string/title_menu_2" />

    <TextView
        android:id="@+id/descMenu2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu2"
        app:layout_constraintStart_toStartOf="@+id/titleMenu2"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu2"
        android:text="@string/desc_menu_2" />

    <ImageView
        android:id="@+id/logoMenu3"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/onboarding_menu3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:layout_editor_absoluteX="411dp" />

    <TextView
        android:id="@+id/titleMenu3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu3"
        app:layout_constraintStart_toStartOf="@+id/logoMenu3"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu3"
        android:text="@string/title_menu_3" />

    <TextView
        android:id="@+id/descMenu3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu3"
        app:layout_constraintStart_toStartOf="@+id/titleMenu3"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu3"
        android:text="@string/desc_menu_3" />

    <ImageView
        android:id="@+id/logoMenu4"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/onboarding_menu4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/titleMenu4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu4"
        app:layout_constraintStart_toStartOf="@+id/logoMenu4"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu4"
        android:text="@string/title_menu_4" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintEnd_toStartOf="@+id/menu2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/blue" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu1"
        app:layout_constraintEnd_toStartOf="@+id/menu3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu1"
        app:layout_constraintTop_toTopOf="@+id/menu1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/blue" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu2"
        app:layout_constraintEnd_toStartOf="@+id/menu4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu2"
        app:layout_constraintTop_toTopOf="@+id/menu2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/blue" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="32dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu3"
        app:layout_constraintTop_toTopOf="@+id/menu3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/blue" />

    <!-- Login Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        android:text="@string/login"
        app:backgroundTint="@color/blue"
        app:cornerRadius="8dp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/signupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Sign Up Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:alpha="0"
        android:backgroundTint="@android:color/white"
        android:text="@string/signup"
        android:textColor="@color/blue"
        app:cornerRadius="8dp"
        app:strokeColor="@color/blue"
        app:strokeWidth="1dp"
        app:layout_constraintBottom_toTopOf="@+id/menu2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.motion.widget.MotionLayout>